feat: hospital apis
