# hospital/internal/controllers/hospital/delete_hospital.go
@@ -1,20 +1,31 @@
 package hospital
 
 import (
+	"fmt"
 	"net/http"
 
+	"github.com/MortalHappiness/VaccineReservationSystem/go-utils/apierrors"
 	"github.com/gin-gonic/gin"
 )
 
-// DeleteHospitalV1 returns hospital id.
-// swagger:route DELETE /v1/hospitals/:id Hospital DeleteHospital
+// DeleteHospital returns hospital id.
+// swagger:route DELETE /api/hospitals/:hospitalID Hospital DeleteHospital
 //
 // Delete the hospital by id.
 //
 // Responses:
-//   200: hospital id
+//   200: DeleteHospital hospitalID
+//   400: BadRequestErrorResponse
 //   500: InternalServerErrorResponse
 //
-func (u *Hospital) DeleteHospitalV1(c *gin.Context) {
-	c.JSON(http.StatusOK, c.Param("id"))
+func (u *Hospital) DeleteHospital(c *gin.Context) {
+	hospitalID := c.Param("hospitalID")
+	if hospitalID == "" {
+		_ = c.Error(apierrors.NewBadRequestError(fmt.Errorf("hospital id is empty")))
+		return
+	}
+
+	// TODO: delete hospital
+
+	c.JSON(http.StatusOK, hospitalID)
 }
