# hospital/internal/router/options.go
@@ -1,14 +1,17 @@
 package router
 
 import (
+	"github.com/MortalHappiness/VaccineReservationSystem/go-utils/middlewares"
 	"github.com/MortalHappiness/VaccineReservationSystem/hospital/internal/controllers/hospital"
 	"github.com/MortalHappiness/VaccineReservationSystem/hospital/internal/env"
+	"github.com/gin-gonic/gin"
 )
 
 // Options collects units to run this service.
 type Options struct {
-	Env                env.Environments
-	hospitalController hospital.I
+	Env                      env.Environments
+	errorCollectorMiddleware gin.HandlerFunc
+	hospitalController       hospital.I
 }
 
 // NewOptions returns Options based on environment variables.
@@ -19,7 +22,8 @@ func NewOptions(env env.Environments) (*Options, error) {
 	}
 
 	return &Options{
-		Env:                env,
-		hospitalController: hospital.New(hospitalOpt),
+		Env:                      env,
+		errorCollectorMiddleware: middlewares.NewErrorCollectorMiddleware(),
+		hospitalController:       hospital.New(hospitalOpt),
 	}, nil
 }
